<resources>
    <string name="app_name">StockApp</string>

    <!-- top navigation text -->
    <string name="main_top_jump">급등관련주</string>
    <string name="main_top_today">오늘시황</string>
    <string name="main_top_analysis">종목분석</string>
    <string name="main_top_recommend">무료종목추천</string>

    <string name="main_jump_left">급등관련주</string>
    <string name="main_jump_right">관련주 즐겨찾기</string>

    <string name="main_jump_root_left">급등관련주</string>
    <string name="main_jump_root_right">최근 본 관련주</string>


    <!-- bottom navigation text -->
    <string name="main_bottom_home">홈</string>
    <string name="main_bottom_fav">즐겨찾기</string>
    <string name="main_bottom_reven">수익인증</string>
    <string name="main_bottom_que">1:1문의</string>
    <string name="main_bottom_more">더보기</string>


    <!-- Intro Permission text -->
    <string name="per_ok">허용하기</string>
    <string name="per_no">취소하기</string>
    <string name="per_message">[설정] > [애플리케이션] > [고수의급등주] > [권한] 에서 허용할 수 있습니다.</string>



</resources>