<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/actionbar_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/search_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:background="@drawable/search"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                />

            <ImageView
                android:id="@+id/logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="167dp"
                android:layout_height="34dp"
                android:background="@drawable/logo_color"
                />

            <ImageView
                android:id="@+id/message"
                android:layout_marginRight="10dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/message"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:id="@+id/topLine"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/actionbar_layout"
            android:layout_width="match_parent"
            android:layout_height="2.2dp"
            android:background="@color/line"
            />




        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_layout"
            app:layout_constraintTop_toBottomOf="@+id/topLine"
            app:layout_constraintBottom_toTopOf="@+id/middleLine"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/text_home"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/text_today"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/text_underline_selector"
                >
                <TextView
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/main_top_jump"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:textColor="@color/c_ff0000"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/text_today"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/text_home"
                app:layout_constraintRight_toLeftOf="@+id/text_analysis"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/text_underline_selector"
                >
                <TextView
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/main_top_today"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:textColor="@color/c_ff0000"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/text_analysis"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/text_today"
                app:layout_constraintRight_toLeftOf="@+id/text_recommend"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/text_underline_selector"
                >
                <TextView
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/main_top_analysis"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:textColor="@color/c_ff0000"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/text_recommend"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/text_analysis"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/text_underline_selector"
                >
                <TextView
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/main_top_recommend"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:textColor="@color/c_ff0000"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/middleLine"
            app:layout_constraintTop_toBottomOf="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/c_969696"
            />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_layout"
            app:layout_constraintBottom_toTopOf="@+id/bottom_tabLayout"
            android:layout_marginTop="1dp"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <androidx.viewpager.widget.ViewPager
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/content_viewPager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                >
            </androidx.viewpager.widget.ViewPager>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include layout="@layout/layout_today_content"
            android:visibility="gone"
            />



<!--        <View-->
<!--            android:id="@+id/Line"-->
<!--            android:layout_marginTop="10dp"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/content_layout"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/bottom_tabLayout"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="1dp"-->
<!--            android:background="@color/line"-->
<!--            />-->

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/bottom_tabLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:tabTextAppearance="@style/tab_text"
            >
            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/home"
                android:text="@string/main_bottom_home" />
            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/star"
                android:text="@string/main_bottom_fav" />
            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/graph_pie"
                android:text="@string/main_bottom_reven" />
            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/conversation"
                android:text="@string/main_bottom_que"
                />
            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/dots_3"
                android:text="@string/main_bottom_more"
                />
        </com.google.android.material.tabs.TabLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>