<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:shimmer="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Bottom.home.HomeFragment">

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/top_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:tabGravity="fill"
            android:layout_gravity="center_horizontal"
            app:tabTextColor="@color/c_969696"
            app:tabSelectedTextColor="@color/c_ff0000"

            >
            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_jump_left" />
            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_jump_right" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_layout"
            app:layout_constraintTop_toBottomOf="@+id/top_layout"
            app:layout_constraintBottom_toTopOf="@+id/slide_layout_visible"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/left_layout"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/root_tab"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:tabGravity="center"
                    android:layout_gravity="center_horizontal"
                    app:tabIndicatorColor="@color/white"
                    app:tabTextColor="@color/c_969696"
                    app:tabSelectedTextColor="@color/c_ff0000"
                    app:tabTextAppearance="@style/root_tab_text"
                    >
                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/root_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_jump_root_left" />
                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/root_right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_jump_root_right" />
                </com.google.android.material.tabs.TabLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/root_left_layout"
                    android:visibility="visible"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/root_tab"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:id="@+id/ShimmerViewContainer"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        shimmer:duration="3000"
                        android:visibility="visible"
                        >
                        <!-- Adding 3 rows of placeholders -->
                        <include layout="@layout/main_placeitem" />
                    </com.facebook.shimmer.ShimmerFrameLayout>
                    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                        android:id="@+id/refresh"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recyclerView"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal"
                                android:overScrollMode="never" />
                    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/root_right_layout"
                    android:visibility="gone"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/root_tab"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">
                </androidx.constraintlayout.widget.ConstraintLayout>




            </androidx.constraintlayout.widget.ConstraintLayout>






            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/right_layout"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="0dp">


            </androidx.constraintlayout.widget.ConstraintLayout>




            <!--            <androidx.viewpager.widget.ViewPager-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="0dp"-->
            <!--                android:id="@+id/content_viewPager"-->
            <!--                app:layout_constraintLeft_toLeftOf="parent"-->
            <!--                app:layout_constraintRight_toRightOf="parent"-->
            <!--                app:layout_constraintTop_toTopOf="parent"-->
            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                >-->
            <!--            </androidx.viewpager.widget.ViewPager>-->


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/slide_layout_visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="visible"
            android:background="@drawable/layout_radius_23dp"
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <TextView
                android:id="@+id/text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"
                android:textColor="@color/c_222222"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="보고싶은 관련주를 선택하세요."
                />

            <View
                android:id="@+id/Line1"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>




        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/slide_layout_gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            android:background="@drawable/layout_radius_23dp"
            android:layout_width="match_parent"
            android:layout_height="250dp">



            <TextView
                android:id="@+id/title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"
                android:textColor="@color/c_222222"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="보고싶은 관련주를 선택하세요."
                />
            <View
                android:id="@+id/Line"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>